--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-    "printWidth": 100,
     "tabWidth": 4,
+    "printWidth": 100,
     "singleQuote": true,
-    "trailingComma": "none",
+    "trailingComma": "all",
     "proseWrap": "always"
 }
